@@ -9,13 +9,17 @@ package org.elasticsearch.xpack.ilm;
 
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.health.HealthIndicatorDetails;
+import org.elasticsearch.health.HealthIndicatorImpact;
 import org.elasticsearch.health.HealthIndicatorResult;
 import org.elasticsearch.health.HealthIndicatorService;
+import org.elasticsearch.health.ImpactArea;
 import org.elasticsearch.health.SimpleHealthIndicatorDetails;
+import org.elasticsearch.health.UserAction;
 import org.elasticsearch.xpack.core.ilm.IndexLifecycleMetadata;
 import org.elasticsearch.xpack.core.ilm.OperationMode;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import static org.elasticsearch.health.HealthStatus.GREEN;
@@ -34,6 +38,12 @@ public class IlmHealthIndicatorService implements HealthIndicatorService {
 
     public static final String NAME = "ilm";
 
+    public static final String HELP_URL = "https://ela.st/fix-ilm";
+    public static final UserAction ILM_NOT_RUNNING = new UserAction(
+        new UserAction.Definition("ilm-not-running", "Start ILM using [POST /_ilm/start].", HELP_URL),
+        null
+    );
+
     private final ClusterService clusterService;
 
     public IlmHealthIndicatorService(ClusterService clusterService) {
@@ -51,19 +61,44 @@ public class IlmHealthIndicatorService implements HealthIndicatorService {
     }
 
     @Override
-    public HealthIndicatorResult calculate(boolean includeDetails) {
+    public String helpURL() {
+        return HELP_URL;
+    }
+
+    @Override
+    public HealthIndicatorResult calculate(boolean explain) {
         var ilmMetadata = clusterService.state().metadata().custom(IndexLifecycleMetadata.TYPE, IndexLifecycleMetadata.EMPTY);
         if (ilmMetadata.getPolicyMetadatas().isEmpty()) {
-            return createIndicator(GREEN, "No policies configured", createDetails(includeDetails, ilmMetadata), Collections.emptyList());
+            return createIndicator(
+                GREEN,
+                "No ILM policies configured",
+                createDetails(explain, ilmMetadata),
+                Collections.emptyList(),
+                Collections.emptyList()
+            );
         } else if (ilmMetadata.getOperationMode() != OperationMode.RUNNING) {
-            return createIndicator(YELLOW, "ILM is not running", createDetails(includeDetails, ilmMetadata), Collections.emptyList());
+            List<HealthIndicatorImpact> impacts = Collections.singletonList(
+                new HealthIndicatorImpact(
+                    3,
+                    "Automatic index lifecycle and data retention management is disabled. The performance and stability of the cluster "
+                        + "could be impacted.",
+                    List.of(ImpactArea.DEPLOYMENT_MANAGEMENT)
+                )
+            );
+            return createIndicator(YELLOW, "ILM is not running", createDetails(explain, ilmMetadata), impacts, List.of(ILM_NOT_RUNNING));
         } else {
-            return createIndicator(GREEN, "ILM is running", createDetails(includeDetails, ilmMetadata), Collections.emptyList());
+            return createIndicator(
+                GREEN,
+                "ILM is running",
+                createDetails(explain, ilmMetadata),
+                Collections.emptyList(),
+                Collections.emptyList()
+            );
         }
     }
 
-    private static HealthIndicatorDetails createDetails(boolean includeDetails, IndexLifecycleMetadata metadata) {
-        if (includeDetails) {
+    private static HealthIndicatorDetails createDetails(boolean explain, IndexLifecycleMetadata metadata) {
+        if (explain) {
             return new SimpleHealthIndicatorDetails(
                 Map.of("ilm_status", metadata.getOperationMode(), "policies", metadata.getPolicies().size())
             );
